# SO2_lab1

./: .gitignore  CMakeLists.txt  Doxyfile  Pipeline.cmake  README.md  compose.yaml  sonar-project.properties
include/: client.h  server.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: EmergencyNotification.h
lib/libdyn/src/: EmergencyNotification.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: AlertInvasion.h  SuppliesData.h
lib/libsta/src/: AlertInvasion.c  SuppliesData.c
src/: client.c  server.c
startproject/: configuration.txt
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
